--- a/ios/eShop.xcodeproj/xcshareddata/xcschemes/eShop-tvOS.xcscheme
+++ b/ios/eShop.xcodeproj/xcshareddata/xcschemes/eShop-tvOS.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-               BuildableName = "MatchmakerPro-tvOS.app"
-               BlueprintName = "MatchmakerPro-tvOS"
-               ReferencedContainer = "container:MatchmakerPro.xcodeproj">
+               BuildableName = "eShop-tvOS.app"
+               BlueprintName = "eShop-tvOS"
+               ReferencedContainer = "container:eShop.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2D02E48F1E0B4A5D006451C7"
-               BuildableName = "MatchmakerPro-tvOSTests.xctest"
-               BlueprintName = "MatchmakerPro-tvOSTests"
-               ReferencedContainer = "container:MatchmakerPro.xcodeproj">
+               BuildableName = "eShop-tvOSTests.xctest"
+               BlueprintName = "eShop-tvOSTests"
+               ReferencedContainer = "container:eShop.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "MatchmakerPro-tvOS.app"
-            BlueprintName = "MatchmakerPro-tvOS"
-            ReferencedContainer = "container:MatchmakerPro.xcodeproj">
+            BuildableName = "eShop-tvOS.app"
+            BlueprintName = "eShop-tvOS"
+            ReferencedContainer = "container:eShop.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "MatchmakerPro-tvOS.app"
-            BlueprintName = "MatchmakerPro-tvOS"
-            ReferencedContainer = "container:MatchmakerPro.xcodeproj">
+            BuildableName = "eShop-tvOS.app"
+            BlueprintName = "eShop-tvOS"
+            ReferencedContainer = "container:eShop.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
